--- a/小玩意导航页.html
+++ b/小玩意导航页.html
@@ -1,19 +1,10 @@
-<!DOCTYPE html>
 <html lang="zh-CN">
     <head>
-        <title>首页:猪圈-使用LIGHTTPD能启猪运营</title>
+        <title>小玩意:猪圈-使用LIGHTTPD能启猪运营</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.staticfile.org/twitter-bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
-        <script src="https://cdn.staticfile.org/twitter-bootstrap/5.3.0/js/bootstrap.min.js"></script> 
-        <!-- Clarity tracking code for https://nqhyee.vsc.icu/ -->
-        <script>
-         (function(c,l,a,r,i,t,y){
-          c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-          t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i+"?ref=bwt";
-          y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-         })(window, document, "clarity", "script", "hh7z8az9h5");
-        </script>
+        <script src="https://cdn.staticfile.org/twitter-bootstrap/5.3.0/js/bootstrap.min.js"></script>
         <meta name="description" content="小猪漫画的猪圈">
     </head>
     <body>
@@ -34,114 +25,18 @@
                 </div>
             </div>
         </nav>   
-        <div class="container-fluid bg-primary text-white text-center rounded">
-          <h4>请收藏我们的网址</h4>
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star" viewBox="0 0 16 16">
-             <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"/>
-          </svg>
-          <p>nqhyee.vsc.icu</p>
-          <p>nqh.0aii.com</p>
-        </div>  
-        <!-- 栏目 -->
-        <ul class="nav nav-tabs" role="tablist">
-            <li class="nav-item"><a class="nav-link active" data-bs-toggle="tab" href="#home">小猪漫画</a></li>
-            <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#menu3">大猪小说</a></li>
-            <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#menu1">财猪漫画</a></li>
-            <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#menu2">语录</a></li>
-        </ul> 
-        <!-- 内容 -->
-        <div class="tab-content">
-            <div id="home" class="container tab-pane active">
-                <br>
-                <h3>小猪漫画</h3>
-                <h6>由小猪编写</h6>
-                <p>停止更新</p> 
-                <a href="/小猪漫画" class="btn btn-primary">阅读 
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-journal-text" viewbox="0 0 16 16"><path d="M5 10.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5zm0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" /> <path d="M3 0h10a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-1h1v1a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v1H1V2a2 2 0 0 1 2-2z" /> <path d="M1 5v-.5a.5.5 0 0 1 1 0V5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0V8h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0v.5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1z" /></svg> 
-                </a>
-            </div>
-            <!--财猪漫画-->
-            <div id="menu1" class="container tab-pane fade">
-                <br>
-                <h3>财猪漫画</h3>
-                <h6>由财猪编写</h6>
-                <p>正在更新</p> 
-                <a href="/财猪漫画" class="btn btn-primary">阅读 
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-journal-text" viewbox="0 0 16 16"><path d="M5 10.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5zm0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" /> <path d="M3 0h10a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-1h1v1a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v1H1V2a2 2 0 0 1 2-2z" /> <path d="M1 5v-.5a.5.5 0 0 1 1 0V5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0V8h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0v.5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1z" /></svg> 
-                </a>
-            </div>
-            <!--大猪小说-->
-            <div id="menu3" class="container tab-pane fade">
-                <br>
-                <h3>大猪小说</h3>
-                <h6>由财猪编写</h6>
-                <p>正在更新</p> 
-                <a href="/大猪小说" class="btn btn-primary">阅读 
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-journal-text" viewbox="0 0 16 16"><path d="M5 10.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5zm0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" /> <path d="M3 0h10a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-1h1v1a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v1H1V2a2 2 0 0 1 2-2z" /> <path d="M1 5v-.5a.5.5 0 0 1 1 0V5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0V8h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0v.5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1z" /></svg> 
-                </a>
-            </div>
-            <!--语录-->
-            <div id="menu2" class="container tab-pane fade">
-                <br>
-                <h3>语录</h3>
-                <h1>出去！</h1> <a href="https://nqhyee.vsc.icu/核导弹" class="btn btn-primary">何导弹</a> <a href="https://nqhyee.vsc.icu/烧饼" class="btn btn-primary">郑烧饼</a> <a href="#" class="btn btn-primary">膏药</a>
-                <div id="menu1" class="container tab-pane fade">
-                </div>
-            </div>
-        </div> 
-        <br>
-        <br>
-        <!--卡片-->
-     <div class="container p-2 my-3 border">
-        <h4 class="text-center display-4">王六童的慢手</h4>
-        <br>
-        <div class="card">
-            <div class="card-body">王六童的屑慢手，乱七八糟</div> 
-            <a href="https://nqhyee.vsc.icu/王六童" class="btn btn-primary">阅读</a>
-            <div class="card-footer text-center">2023-6-25</div>
-        </div> 
-     </div>
-        <br>
-        <br>
-     <div class="container p-3 my-3 border">
-        <h4 class="text-center display-4">文章</h4>
-        <br>
-         <div class="card">
-            <h5 class="card-header text-center">我emo了</h5>
-            <div class="card-body">mm给我报了一堆辅导班，以后可能没有时间维护了…</div> 
-            <a href="https://nqhyee.vsc.icu/文章/我emo了" class="btn btn-primary">阅读
-              <span class="badge bg-danger">新</span>
-            </a>
-            <div class="card-footer text-center">2023-7-8</div>
-         </div> 
-        <br>
-        <div class="card">
-            <h5 class="card-header text-center">盲憨把自己压缩了</h5>
-            <div class="card-body">QQ浏览器，我做错了什么？
-            </div> <a href="https://nqhyee.vsc.icu/文章/盲憨把自己压缩了" class="btn btn-primary">阅读 </a>
-            <div class="card-footer text-center">2023-6-18</div>
-        </div> 
-        <br>
-        <br>
-     </div>
-     <div class="container p-3 my-3 border">
-        <h5 class="text-center display-4">日志</h4>
-        <br>
-        <div class="card">
-            <h5 class="card-header text-center">猪圈V2版本升级列表</h5>
-            <div class="card-body">更改内容一大堆</div> 
-            <a href="https://nqhyee.vsc.icu/日志/猪圈V2更改" class="btn btn-primary">阅读</a>
-            <div class="card-footer text-center">2023-6-29</div>
-        </div>
-        <br>
-        <div class="card">
-            <h5 class="card-header text-center">更换前端库</h5>
-            <div class="card-body">cdn.jsdelivr.net炸了，被墙了</div> 
-            <a href="https://nqhyee.vsc.icu/日志/更换前端库" class="btn btn-primary">阅读 </a>
-            <div class="card-footer text-center">2023-6-22</div>
-        </div> 
-        <br> 
-     </div>
+     <h4 class="text-center">用BootStrap+JavaScript编的乱七八糟的皇子</h4>
+     <br>
+     </h4><h1 class="text-center">游戏</h1>
+     <a href="https://nqhyee.vsc.icu/工具&amp;小游戏/复选框画板.html" class="btn btn-outline-primary">复选框画板</a>
+     <a href="https://nqhyee.vsc.icu/工具&amp;小游戏/电子木鱼.html" class="btn btn-outline-primary">电子木鱼</a>
+     <a href="https://nqhyee.vsc.icu/工具&amp;小游戏/快速复选框.html" class="btn btn-outline-primary">复选框游戏</a>
+     <p>&nbsp;&nbsp;&nbsp;</p>
+     <p>&nbsp;&nbsp;&nbsp;</p>     
+     <h1 class="text-center">工具</h1>
+     <a href="https://nqhyee.vsc.icu/工具&amp;小游戏/打字板.html" class="btn btn-outline-primary">打字板</a>
+     <br/>
+     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
         <!--按钮-->
         <a href="#" class="btn btn-outline-success">回到顶部 
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-bar-up" viewbox="0 0 16 16"><path fill-rule="evenodd" d="M8 10a.5.5 0 0 0 .5-.5V3.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 3.707V9.5a.5.5 0 0 0 .5.5zm-7 2.5a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13a.5.5 0 0 1-.5-.5z" /></svg> 
@@ -171,9 +66,8 @@
               </a>
           </div>
         </div>
-
 <script>
-               (() => {
+(() => {
   'use strict'
 
   const getStoredTheme = () => localStorage.getItem('theme')
@@ -246,8 +140,8 @@
         })
       })
   })
-})()       
+})()
 </script>
         </div>
     </body>
-</html>
+</html>            
