--- a/下载.html
+++ b/下载.html
@@ -31,7 +31,7 @@
           <h2 class="text-center">必读</h2>  
           <p>源码可以作为模板使用，文章可以转载（CC）</p>
         </div>
-        <img src="https://cdnjson.com/images/2023/07/19/4a2703a70724bd7f6b0613838eac6ddd_1440w.th.png" alt="CC BY" border="0"></img>
+        <img src="https://cdnjson.com/images/2023/07/19/4a2703a70724bd7f6b0613838eac6ddd_1440w.th.png" alt="CC BY"</img>
       <div class="text-center">
         <a href="源码.tar.gz" class="btn btn-primary">下载最新源码压缩包
           <svg xmlns="http://www.w3.org/2000/svg" width="89" height="97" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
