--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                  runtime_span.innerHTML="本站勉强运行: "+A+"天"+B+"小时"+C+"分"+D+"秒"}show_runtime();
             </script> 
             <img src="/logo-m.svg" alt="icon.png" border="0">
-            <h5>由ksweb强力驱动</h5>
+            <h5>由4everlans托管</h5>
             <p>能启猪负责运营</p>
           <div class="btn-group">
               <a href="https://nqhyee.vsc.icu/sitemap.xml" class="btn btn-warning">网站地图查看 
