--- a/blog.html
+++ b/blog.html
@@ -80,8 +80,8 @@
                  a=T/M;A=Math.floor(a);b=(a-A)*24;B=Math.floor(b);c=(b-B)*60;C=Math.floor((b-B)*60);D=Math.floor((c-C)*60);
                  runtime_span.innerHTML="本站勉强运行: "+A+"天"+B+"小时"+C+"分"+D+"秒"}show_runtime();
             </script> 
-            <img href="https://cdnjson.com/image/GKLUD"><img src="https://cdnjson.com/images/2023/06/24/icon.th.png" alt="icon.png" border="0">
-            <h5>由ksweb强力驱动</h5>
+            <img src="/logo-m.svg" alt="icon.png" border="0">
+            <h5>由4everlans托管</h5>
             <p>能启猪负责运营</p>
           <div class="btn-group">
               <a href="https://nqhyee.vsc.icu/sitemap.xml" class="btn btn-warning">网站地图查看 
@@ -92,6 +92,7 @@
               </a>
           </div>
         </div>
+
 <script>
 (() => {
   'use strict'
