--- a/下载.html
+++ b/下载.html
@@ -31,9 +31,7 @@
           <h2 class="text-center">必读</h2>  
           <p>源码可以作为模板使用，文章可以转载（CC）</p>
         </div>
-     <div class="text-center">
-       <img src="https://cdnjson.com/images/2023/07/19/4a2703a70724bd7f6b0613838eac6ddd_1440w.png" alt="CC BY" border="0">
-     </div>
+        <img src="https://cdnjson.com/images/2023/07/19/4a2703a70724bd7f6b0613838eac6ddd_1440w.th.png" alt="CC BY"</img>
       <div class="text-center">
         <a href="源码.tar.gz" class="btn btn-primary">下载最新源码压缩包
           <svg xmlns="http://www.w3.org/2000/svg" width="89" height="97" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
@@ -44,8 +42,8 @@
       </div>
            
         
-        <!--页脚--> 
-        <br>
+             <!--页脚--> 
+             <br>
         <div class="mt-5 p-4 bg-dark text-white text-center"><span id="runtime_span"></span>
             <script type="text/javascript">function show_runtime(){window.setTimeout("show_runtime()",1000);X=new 
                  Date("6/5/2023 0:00:00");
@@ -53,8 +51,8 @@
                  a=T/M;A=Math.floor(a);b=(a-A)*24;B=Math.floor(b);c=(b-B)*60;C=Math.floor((b-B)*60);D=Math.floor((c-C)*60);
                  runtime_span.innerHTML="本站勉强运行: "+A+"天"+B+"小时"+C+"分"+D+"秒"}show_runtime();
             </script> 
-            <img href="https://cdnjson.com/image/GKLUD"><img src="https://cdnjson.com/images/2023/06/24/icon.th.png" alt="icon.png" border="0">
-            <h5>由ksweb强力驱动</h5>
+            <img src="/logo-m.svg" alt="icon.png" border="0">
+            <h5>由4everlans托管</h5>
             <p>能启猪负责运营</p>
           <div class="btn-group">
               <a href="https://nqhyee.vsc.icu/sitemap.xml" class="btn btn-warning">网站地图查看 
@@ -65,6 +63,7 @@
               </a>
           </div>
         </div>
+
 <script>
 (() => {
   'use strict'
