--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </script>
         <meta name="description" content="小猪漫画的猪圈">
     </head>
-    <body>
+    <body style="margin:0;padding:0;overflow:hidden" scroll="no">
     <!--导航栏-->
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
@@ -146,7 +146,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-bar-up" viewbox="0 0 16 16"><path fill-rule="evenodd" d="M8 10a.5.5 0 0 0 .5-.5V3.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 3.707V9.5a.5.5 0 0 0 .5.5zm-7 2.5a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13a.5.5 0 0 1-.5-.5z" /></svg> 
         </a> 
             <br>
-     <iframe src="页脚.html" frameborder="0" width="100%" height="100%" scrolling="no"></iframe>
+      <iframe src="页脚.html" frameborder="0" width="100%" height="100%" scrolling="no" marginwidth="0" marginheight="0"></iframe>
 <script>
                (() => {
   'use strict'
