--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </script>
         <meta name="description" content="小猪漫画的猪圈">
     </head>
-    <body style="margin:0;padding:0;overflow:hidden" scroll="no">
+    <body>
     <!--导航栏-->
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
