--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.staticfile.org/twitter-bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.staticfile.org/twitter-bootstrap/5.3.0/js/bootstrap.min.js"></script>
-        <script src="dark.js"</script>
+        <script src="/dark.js"</script>
         <meta name="description" content="小猪的博客-邮箱：pig810@outlook.com">
     </head>
  <body>
