--- a/blog.html
+++ b/blog.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="zh-CN">
     <head>
         <title>文章:猪圈-能启猪运营</title>
@@ -5,8 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.staticfile.org/twitter-bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.staticfile.org/twitter-bootstrap/5.3.0/js/bootstrap.min.js"></script>
-        <script src="/dark.js"</script>
         <meta name="description" content="小猪的博客-邮箱：pig810@outlook.com">
+        <script type="text/javascript" src="dark.js"</script>       
     </head>
  <body>
     <!--导航栏-->
