--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="https://nqhyee.vsc.icu/">首页</a></li>
                         <li class="nav-item"><a class="nav-link" href="/下载.html">下载</a></li>
                         <li class="nav-item"><a class="nav-link" href="/留言.html">留言</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/blog.html">文章</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/表情包">表情包</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/小玩意导航页.html">小工具&小游戏</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/关于">关于</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/blog.html">文章</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/表情包">表情包</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/小玩意导航页.html">小工具&小游戏</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/关于">关于</a></li>
                     </ul>
                 </div>
             </div>
@@ -167,32 +167,33 @@
         <br>
         <br>
         <!--卡片-->
-      <div class="shadow p-4 mb-4 bg-white">
+      <div class="shadow p-4 mb-4">
         <h4 class="text-center display-4">王六童的慢手
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-card-text" viewBox="0 0 16 16">
+          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-card-text" viewBox="0 0 16 16">
              <path d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h13zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13z"/>
              <path d="M3 5.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 8zm0 2.5a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5z"/>
           </svg>        
         </h4>
-      </div>  
-        
         <br>
         <div class="card">
             <div class="card-body">王六童的屑慢手，乱七八糟</div> 
             <a href="https://nqhyee.vsc.icu/王六童" class="btn btn-primary">阅读</a>
             <div class="card-footer text-center">2023-6-25</div>
         </div> 
-     </div>
+      </div>
         <br>
         <br>
-     <div class="container p-3 my-3 border">
-        <h4 class="text-center display-4">文章</h4>
+      <div class="shadow p-4 mb-4">
+        <h4 class="text-center display-4">文章
+          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-body-text" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M0 .5A.5.5 0 0 1 .5 0h4a.5.5 0 0 1 0 1h-4A.5.5 0 0 1 0 .5Zm0 2A.5.5 0 0 1 .5 2h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5Zm9 0a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5Zm-9 2A.5.5 0 0 1 .5 4h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5Zm5 0a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5Zm7 0a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5Zm-12 2A.5.5 0 0 1 .5 6h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5Zm8 0a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5Zm-8 2A.5.5 0 0 1 .5 8h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5Zm7 0a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5Zm-7 2a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 0 1h-8a.5.5 0 0 1-.5-.5Zm0 2a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5Zm0 2a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5Z"/>
+          </svg>      
+        </h4>
         <br>
          <div class="card">
             <h5 class="card-header text-center">我emo了</h5>
             <div class="card-body">mm给我报了一堆辅导班，以后可能没有时间维护了…</div> 
             <a href="https://nqhyee.vsc.icu/文章/我emo了" class="btn btn-primary">阅读
-              <span class="badge bg-danger">新</span>
             </a>
             <div class="card-footer text-center">2023-7-8</div>
          </div> 
@@ -205,9 +206,14 @@
         </div> 
         <br>
         <br>
-     </div>
-     <div class="container p-3 my-3 border">
-        <h5 class="text-center display-4">日志</h4>
+      </div>
+      <div class="shadow p-4 mb-4">
+        <h4 class="text-center display-4">日志
+          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-code-square" viewBox="0 0 16 16">
+            <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+            <path d="M6.854 4.646a.5.5 0 0 1 0 .708L4.207 8l2.647 2.646a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 0 1 .708 0zm2.292 0a.5.5 0 0 0 0 .708L11.793 8l-2.647 2.646a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708 0z"/>
+          </svg>
+        </h4>
         <br>
         <div class="card">
             <h5 class="card-header text-center">猪圈V2版本升级列表</h5>
@@ -223,7 +229,7 @@
             <div class="card-footer text-center">2023-6-22</div>
         </div> 
         <br> 
-     </div>
+      </div>
         <!--按钮-->
         <a href="#" class="btn btn-outline-success">回到顶部 
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-bar-up" viewbox="0 0 16 16"><path fill-rule="evenodd" d="M8 10a.5.5 0 0 0 .5-.5V3.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 3.707V9.5a.5.5 0 0 0 .5.5zm-7 2.5a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13a.5.5 0 0 1-.5-.5z" /></svg> 
