--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
 <html lang="zh-CN">
     <head>
-        <title>首页:猪圈-能启猪运营</title>
+        <title>王六童:猪圈-能启猪运营</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.staticfile.org/twitter-bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
-        <script src="https://cdn.staticfile.org/twitter-bootstrap/5.3.0/js/bootstrap.min.js"></script> 
+        <script src="https://cdn.staticfile.org/twitter-bootstrap/5.3.0/js/bootstrap.min.js"></script>
+        <meta name="description" content="小猪漫画的猪圈">
         <script>
                (() => {
           'use strict'
@@ -81,16 +81,7 @@
               })
           })
          })()  
-        </script>  
-        <!-- Clarity tracking code for https://nqhyee.vsc.icu/ -->
-        <script>
-         (function(c,l,a,r,i,t,y){
-          c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-          t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i+"?ref=bwt";
-          y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-         })(window, document, "clarity", "script", "hh7z8az9h5");
-        </script>
-        <meta name="description" content="小猪漫画的猪圈">
+        </script>          
     </head>
     <body>
     <!--导航栏-->
@@ -100,141 +91,53 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="https://nqhyee.vsc.icu/">首页</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/下载.html">下载</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/留言.html">留言</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/blog.html">文章</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/表情包">表情包</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/小玩意导航页.html">小工具&小游戏</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/关于">关于</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/考试.html">考试倒计时</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/留言.html">留言</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/blog.html">文章</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/表情包">表情包</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/小玩意导航页.html">小工具&小游戏</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/关于">关于</a></li>
                     </ul>
                 </div>
             </div>
-        </nav>   
-        <div class="container-fluid bg-primary text-center rounded">
-          <h4 class="text-danger">请收藏我们的网址</h4>
-          <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" fill="currentColor" class="bi bi-star" viewBox="0 0 16 16">
-             <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"/>
-          </svg>
-          <p class="text-danger">nqhyee.vsc.icu</p>
-        </div>  
-        <!-- 栏目 -->
-        <ul class="nav nav-tabs" role="tablist">
-            <li class="nav-item"><a class="nav-link active" data-bs-toggle="tab" href="#home">小猪漫画</a></li>
-            <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#menu3">大猪小说</a></li>
-            <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#menu1">财猪漫画</a></li>
-            <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#menu2">语录</a></li>
-        </ul> 
-        <!-- 内容 -->
-        <div class="tab-content">
-            <div id="home" class="container tab-pane active">
-                <br>
-                <h3>小猪漫画</h3>
-                <h6>由小猪编写</h6>
-                <p>停止更新</p> 
-                <a href="/小猪漫画" class="btn btn-primary">阅读 
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-journal-text" viewbox="0 0 16 16"><path d="M5 10.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5zm0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" /> <path d="M3 0h10a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-1h1v1a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v1H1V2a2 2 0 0 1 2-2z" /> <path d="M1 5v-.5a.5.5 0 0 1 1 0V5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0V8h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0v.5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1z" /></svg> 
-                </a>
-            </div>
-            <!--财猪漫画-->
-            <div id="menu1" class="container tab-pane fade">
-                <br>
-                <h3>财猪漫画</h3>
-                <h6>由财猪编写</h6>
-                <p>正在更新</p> 
-                <a href="/财猪漫画" class="btn btn-primary">阅读 
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-journal-text" viewbox="0 0 16 16"><path d="M5 10.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5zm0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" /> <path d="M3 0h10a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-1h1v1a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v1H1V2a2 2 0 0 1 2-2z" /> <path d="M1 5v-.5a.5.5 0 0 1 1 0V5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0V8h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0v.5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1z" /></svg> 
-                </a>
-            </div>
-            <!--大猪小说-->
-            <div id="menu3" class="container tab-pane fade">
-                <br>
-                <h3>大猪小说</h3>
-                <h6>由财猪编写</h6>
-                <p>正在更新</p> 
-                <a href="/大猪小说" class="btn btn-primary">阅读 
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-journal-text" viewbox="0 0 16 16"><path d="M5 10.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5zm0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" /> <path d="M3 0h10a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-1h1v1a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v1H1V2a2 2 0 0 1 2-2z" /> <path d="M1 5v-.5a.5.5 0 0 1 1 0V5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0V8h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0v.5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1z" /></svg> 
-                </a>
-            </div>
-            <!--语录-->
-            <div id="menu2" class="container tab-pane fade">
-                <br>
-                <h3>语录</h3>
-                <h1>出去！</h1> <a href="https://nqhyee.vsc.icu/核导弹" class="btn btn-primary">何导弹</a> <a href="https://nqhyee.vsc.icu/烧饼" class="btn btn-primary">郑烧饼</a> <a href="#" class="btn btn-primary">膏药</a>
-                <div id="menu1" class="container tab-pane fade">
-                </div>
-            </div>
-        </div> 
-        <br>
-        <br>
-        <!--卡片-->
-      <div class="shadow p-4 mb-4">
-        <h4 class="text-center display-4">王六童的慢手
-          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-card-text" viewBox="0 0 16 16">
-             <path d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h13zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13z"/>
-             <path d="M3 5.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 8zm0 2.5a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5z"/>
-          </svg>        
-        </h4>
-        <br>
-        <div class="card">
-            <div class="card-body">王六童的屑慢手，乱七八糟</div> 
-            <a href="https://nqhyee.vsc.icu/王六童" class="btn btn-primary">阅读</a>
-            <div class="card-footer text-center">2023-6-25</div>
-        </div> 
-      </div>
-        <br>
-        <br>
-      <div class="shadow p-4 mb-4">
-        <h4 class="text-center display-4">文章
-          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-body-text" viewBox="0 0 16 16">
-            <path fill-rule="evenodd" d="M0 .5A.5.5 0 0 1 .5 0h4a.5.5 0 0 1 0 1h-4A.5.5 0 0 1 0 .5Zm0 2A.5.5 0 0 1 .5 2h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5Zm9 0a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5Zm-9 2A.5.5 0 0 1 .5 4h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5Zm5 0a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5Zm7 0a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5Zm-12 2A.5.5 0 0 1 .5 6h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5Zm8 0a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5Zm-8 2A.5.5 0 0 1 .5 8h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5Zm7 0a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5Zm-7 2a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 0 1h-8a.5.5 0 0 1-.5-.5Zm0 2a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5Zm0 2a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5Z"/>
-          </svg>      
-        </h4>
-        <br>
-         <div class="card">
-            <h5 class="card-header text-center">我emo了</h5>
-            <div class="card-body">mm给我报了一堆辅导班，以后可能没有时间维护了…</div> 
-            <a href="https://nqhyee.vsc.icu/文章/我emo了" class="btn btn-primary">阅读
-            </a>
-            <div class="card-footer text-center">2023-7-8</div>
-         </div> 
-        <br>
-        <div class="card">
-            <h5 class="card-header text-center">盲憨把自己压缩了</h5>
-            <div class="card-body">QQ浏览器，我做错了什么？
-            </div> <a href="https://nqhyee.vsc.icu/文章/盲憨把自己压缩了" class="btn btn-primary">阅读 </a>
-            <div class="card-footer text-center">2023-6-18</div>
-        </div> 
-        <br>
-        <br>
-      </div>
-      <div class="shadow p-4 mb-4">
-        <h4 class="text-center display-4">日志
-          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-code-square" viewBox="0 0 16 16">
-            <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
-            <path d="M6.854 4.646a.5.5 0 0 1 0 .708L4.207 8l2.647 2.646a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 0 1 .708 0zm2.292 0a.5.5 0 0 0 0 .708L11.793 8l-2.647 2.646a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708 0z"/>
-          </svg>
-        </h4>
-        <br>
-        <div class="card">
-            <h5 class="card-header text-center">猪圈V2版本升级列表</h5>
-            <div class="card-body">更改内容一大堆</div> 
-            <a href="https://nqhyee.vsc.icu/日志/猪圈V2更改" class="btn btn-primary">阅读</a>
-            <div class="card-footer text-center">2023-6-29</div>
+        </nav> <br>
+        <div class="alert alert-success">
+            <strong>王六童和李安然van狗浴</strong> <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
         </div>
-        <br>
-        <div class="card">
-            <h5 class="card-header text-center">更换前端库</h5>
-            <div class="card-body">cdn.jsdelivr.net炸了，被墙了</div> 
-            <a href="https://nqhyee.vsc.icu/日志/更换前端库" class="btn btn-primary">阅读 </a>
-            <div class="card-footer text-center">2023-6-22</div>
-        </div> 
-        <br> 
-      </div>
-        <!--按钮-->
-        <a href="#" class="btn btn-outline-success">回到顶部 
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-bar-up" viewbox="0 0 16 16"><path fill-rule="evenodd" d="M8 10a.5.5 0 0 0 .5-.5V3.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 3.707V9.5a.5.5 0 0 0 .5.5zm-7 2.5a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13a.5.5 0 0 1-.5-.5z" /></svg> 
-        </a> 
-            <br>
+        <h1 class="text-center">猪波终于攒够了，买了个裤衩</h1>
+        <div class="container p-5 my-5 border">
+         <p align="center">
+            <video width="400px" controls>
+                <source src="msz.mp4" type="video/mp4"> Your browser does not support the video tag.
+            </video>
+         </p>
+        </div>
+         <br>
+        <div class="container p-5 my-5 border">
+            <h1 class="text-center">盆友圈</h1> <img class="img-fluid rounded" src="https://cdnjson.com/images/2023/06/28/Screenshot_20230625_192853_com.smile.gifmaker.jpg" alt="Screenshot_20230625_192853_com.smile.gifmaker.jpg" border="0">
+            <h5 class="text-muted text-center">sky.粘氨.</h5>
+        </div>
+        <div class="container p-5 my-5 border">
+            <h1 class="text-center">显摆裤衩的王六童</h1> <img class="img-fluid rounded" src="https://cdnjson.com/images/2023/06/28/Screenshot_20230625_192839_com.smile.gifmaker.jpg" alt="Screenshot_20230625_192839_com.smile.gifmaker.jpg" border="0">
+        </div> <br>
+        <div class="container p-5 my-5 border">
+            <h1 class="text-center">《苦茶》</h1> <img class="img-fluid rounded" src="https://cdnjson.com/images/2023/06/29/Screenshot_20230629_015805_com.kuaishou.nebula.jpg" alt="Screenshot_20230629_015805_com.kuaishou.nebula.jpg" border="0">
+        </div>
+        </div> <a href="#" class="btn btn-outline-danger">西瓜视频</a> <a href="#" class="btn btn-outline-success">回到顶部</a> <a href="https://nqhyee.vsc.icu/源码.tar.gz" class="btn btn-outline-info">下载源代码</a>
+           <link rel="stylesheet" href="https://unpkg.com/@waline/client@v2/dist/waline.css"/>
+        <!--评论系统-->
+         <link href="https://cdn.staticfile.org/waline/2.15.5/waline.min.css" rel="stylesheet">
+         <div id="waline"></div>
+         <script type="module">
+          import { init } from 'https://unpkg.com/@waline/client@v2/dist/waline.mjs';
+                
+
+          init({
+          el: '#waline',
+          comment: true,
+          serverURL: 'https://waline-1-r1862846.deta.app',
+         });
+        </script>           
              <!--页脚--> 
         <div class="mt-5 p-4 bg-dark text-white text-center"><span id="runtime_span"></span>
             <script type="text/javascript">function show_runtime(){window.setTimeout("show_runtime()",1000);X=new 
