--- a/关于/index.html
+++ b/关于/index.html
@@ -91,16 +91,16 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="https://nqhyee.vsc.icu/">首页</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/考试.html">考试倒计时</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/下载.html">下载</a></li>
                         <li class="nav-item"><a class="nav-link" href="/留言.html">留言</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/blog.html">文章</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/表情包">表情包</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/小玩意导航页.html">小工具&amp;小游戏</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/关于">关于</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/blog.html">文章</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/表情包">表情包</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/小玩意导航页.html">小工具&小游戏</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/关于">关于</a></li>
                     </ul>
                 </div>
             </div>
-        </nav>
+        </nav>   
         <h2 class="text-center">关于猪圈</h2>
         <div class="btn-group"> 
           <a href="https://getbootstrap.com/" class="btn btn-primary">bootstrap</a>  
