--- a/blog.html
+++ b/blog.html
@@ -113,6 +113,21 @@
             </ul>
         </ul>
         <div class="card">
+            <h5 class="card-header text-center">能启猪上东兴</h5>
+            <div class="card-body">
+                <div class="text-center">盲憨和王六童都上了27                                   
+                </div>
+            </div> 
+            <div class="d-grid">
+              <a href="https://nqhyee.vsc.icu/文章/能启猪上东兴" class="btn btn-primary">阅读</a>
+            </div>
+            <div class="card-footer text-center">
+                2023-7-8 
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-week" viewbox="0 0 16 16"><path d="M11 6.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-5 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1z" /> <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z" />
+                </svg>
+            </div>
+        </div>
+        <div class="card">
             <h5 class="card-header text-center">我emo了</h5>
             <div class="card-body">
                 <div class="text-center"><a href="https://imgtg.com/image/Ozfmqq"><img src="https://i.imgtg.com/2023/07/16/Ozfmqq.th.webp" alt="Ozfmqq.th.webp" border="0"></a>
