--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
          })(window, document, "clarity", "script", "hh7z8az9h5");
         </script>
-        <meta name="description" content="小猪漫画的猪圈">
+        <meta name="description" content="欢迎来到能启猪的个人网站！我是一名XXS，对于各种创意和技术充满了热情。这个网站是我展示自己创造力和分享各种有趣的内容的地方。除了个人作品，此外，我还会在我的博客中分享一些我个人生活的点滴和经历。我相信生活的每一个瞬间都是值得记录和分享的，我希望通过我的博客能够与大家建立更加深入的连接。感谢你来到我的网站，希望你能够在这里找到你感兴趣的内容，并且享受浏览我的作品所带来的乐趣。如果你有任何问题或者想法，欢迎与我联系。邮箱：pig810@outlook.com让我们一起创造并分享美好的事物！">
     </head>
     <body>
     <!--导航栏-->
@@ -109,7 +109,10 @@
                     </ul>
                 </div>
             </div>
-        </nav>   
+        </nav>  
+         <div class="alert alert-primary">
+           <p>能启猪报初中，报了<strong>东兴</strong></p>
+         </div>
         <div class="container-fluid bg-primary text-center rounded">
           <h4 class="text-danger">请收藏我们的网址</h4>
           <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" fill="currentColor" class="bi bi-star" viewBox="0 0 16 16">
@@ -190,13 +193,21 @@
           </svg>      
         </h4>
         <br>
-         <div class="card">
-            <h5 class="card-header text-center">我emo了</h5>
-            <div class="card-body">mm给我报了一堆辅导班，以后可能没有时间维护了…</div> 
-            <a href="https://nqhyee.vsc.icu/文章/我emo了" class="btn btn-primary">阅读
-            </a>
-            <div class="card-footer text-center">2023-7-8</div>
-         </div> 
+        <div class="card">
+            <h5 class="card-header text-center">能启猪上东兴</h5>
+            <div class="card-body">
+                <div class="text-center">盲憨和王六童都上了27                                   
+                </div>
+            </div> 
+            <div class="d-grid">
+              <a href="https://nqhyee.vsc.icu/文章/上东兴的能启猪" class="btn btn-primary">阅读</a>
+            </div>
+            <div class="card-footer text-center">
+                2023-7-8 
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-week" viewbox="0 0 16 16"><path d="M11 6.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-5 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1z" /> <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z" />
+                </svg>
+            </div>
+        </div>
         <br>
         <div class="card">
             <h5 class="card-header text-center">盲憨把自己压缩了</h5>
