--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
           'use strict'
 
           const getStoredTheme = () => localStorage.getItem('theme')
-          const setStoredTheme = theme => localStor;age.setItem('theme', theme)
+          const setStoredTheme = theme => localStorage.setItem('theme', theme)
 
           const getPreferredTheme = () => {
             const storedTheme = getStoredTheme()
@@ -119,7 +119,7 @@
                 </div>
             </div> 
             <div class="d-grid">
-              <a href="https://nqhyee.vsc.icu/文章/能启猪上东兴" class="btn btn-primary">阅读</a>
+              <a href="https://nqhyee.vsc.icu/文章/上东兴的能启猪" class="btn btn-primary">阅读</a>
             </div>
             <div class="card-footer text-center">
                 2023-7-8 
@@ -127,6 +127,7 @@
                 </svg>
             </div>
         </div>
+        <br>
         <div class="card">
             <h5 class="card-header text-center">我emo了</h5>
             <div class="card-body">
