--- a/blog分类/homo.html
+++ b/blog分类/homo.html
@@ -109,15 +109,20 @@
         <ul class="nav nav-tabs">
             <ul class="nav nav-tabs">
                 <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/blog.html">全部</a></li>            
-                <li class="nav-item"><a class="nav-link active" href="https://nqhyee.vsc.icu/blog分类/bblog.html">大杂烩</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/blog分类/bblog.html">大杂烩</a></li>
                 <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/log.html">本站日志</a></li>
-                <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/blog分类/homo.html">homo</a></li>                
+                <li class="nav-item"><a class="nav-link active" href="https://nqhyee.vsc.icu/blog分类/homo.html">homo</a></li>                
             </ul>
         </ul>
         <div class="card">
             <h5 class="card-header text-center">臭手表（大悲）</h5>
             <div class="card-body">
                 使用沼气电池的手表，699大洋
+          <p align="center">
+            <video width="400px" controls>
+                <source src="https://nqhyee.vsc.icu/homo/臭手表/HomoWatch.mp4" type="video/mp4"> Your browser does not support the video tag.
+            </video>
+          </p>                
             </div> <a href="https://nqhyee.vsc.icu/homo/臭手表" class="btn btn-primary">阅读</a>
             <div class="card-footer text-center">
                 2023-9-4
