--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 使用沼气电池的手表，699大洋
           <p align="center">
             <video width="400px" controls>
-                <source src="https://nqhyee.vsc.icu/homo/臭手表/HomoWatch.mp4" type="video/mp4"> Your browser does not support the video tag.
+                <source src="http://pancdndx1.muhan.ltd:54689/api/v3/slave/source/0/dXBsb2Fkcy8yMDIzLzA5LzIzL0hvbW9XYXRjaC5tcDQ/HomoWatch.mp4?sign=v0IBl0nRnM37hYqy7EMHN7RT0V6yk7-7t2cHphv4ITs%3D%3A0" type="video/mp4"> Your browser does not support the video tag.
             </video>
           </p>
             </div> <a href="https://nqhyee.vsc.icu/homo/臭手表" class="btn btn-primary">阅读</a>
