--- a/blog.html
+++ b/blog.html
@@ -203,6 +203,6 @@
            </svg> 
         </a>
         <br> 
-        <iframe src="页脚.html" width="100%" height="100%" seamless></iframe>     
+        <iframe border="0" style="vertical-align: bottom;" src="页脚.html" width="100%" height="100%" seamless></iframe>     
     </body>
 </html>
