--- a/blog.html
+++ b/blog.html
@@ -117,11 +117,28 @@
             <li class="nav-item"><a class="nav-link active" data-bs-toggle="tab" href="#home">全部</a></li>
             <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#menu3">大杂烩</a></li>
             <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#menu1">日志</a></li>
-            <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#menu2">hono</a></li>
+            <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#menu2">homo</a></li>
         </ul>         
         <!--全部-->
         <div class="tab-content">
             <div id="home" class="container tab-pane active">
+        <div class="card">
+            <h5 class="card-header text-center">未来可寄</h5>
+            <div class="card-body">
+                <div class="text-center">烧饼快气死了，工资怎么这么高，王六童都想糊屎山了                                  
+                </div>
+                <img class="img-fluid" src="https://cdnjson.com/images/2023/10/09/2023_1002_182045.png" alt="2023_1002_182045.png" border="0" />
+            </div> 
+            <div class="d-grid">
+              <a href="https://nqhyee.vsc.icu/文章/未来可寄" class="btn btn-primary">阅读</a>
+            </div>
+            <div class="card-footer text-center">
+                2023-10-9                 
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-week" viewbox="0 0 16 16"><path d="M11 6.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-5 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1z" /> <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z" />
+                </svg>
+            </div>
+        </div>
+        <br>            
                 <br>
         <div class="card">
             <h5 class="card-header text-center">臭手表（大悲）</h5>
@@ -207,8 +224,25 @@
         <br>               
             </div>
             <!--大杂烩-->
-            <div id="menu1" class="container tab-pane fade">
+            <div id="menu3" class="container tab-pane fade">
                 <br>
+        <div class="card">
+            <h5 class="card-header text-center">未来可寄</h5>
+            <div class="card-body">
+                <div class="text-center">烧饼快气死了，工资怎么这么高，王六童都想糊屎山了                                  
+                </div>
+                <img class="img-fluid" src="https://cdnjson.com/images/2023/10/09/2023_1002_182045.png" alt="2023_1002_182045.png" border="0" />
+            </div> 
+            <div class="d-grid">
+              <a href="https://nqhyee.vsc.icu/文章/未来可寄" class="btn btn-primary">阅读</a>
+            </div>
+            <div class="card-footer text-center">
+                2023-10-9                 
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-week" viewbox="0 0 16 16"><path d="M11 6.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-5 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1z" /> <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z" />
+                </svg>
+            </div>
+        </div>
+        <br>                            
         <div class="card">
             <h5 class="card-header text-center">能启猪上东兴</h5>
             <div class="card-body">
@@ -256,7 +290,7 @@
         </div>                        
             </div>
             <!--日志-->
-            <div id="menu3" class="container tab-pane fade">
+            <div id="menu1" class="container tab-pane fade">
                 <br>
         <div class="card">
             <h5 class="card-header text-center">猪圈V2版本升级列表</h5>
