--- a/blog.html
+++ b/blog.html
@@ -82,6 +82,10 @@
           })
          })()  
         </script>  
+        <script src="http://pancdndx1.muhan.ltd:54689/api/v3/slave/source/0/dXBsb2Fkcy8yMDIzLzEwLzE0L3ZpZXctaW1hZ2UubWluLmpz/view-image.min.js?sign=f7N7Ru504YJqPyFgAitHkNOp-qfRV46v49qqq8Ln5PQ%3D%3A0"></script>
+        <script>
+           window.ViewImage && ViewImage.init('.img-fluid');
+        </script>        
     </head>
     <body>
     <!--导航栏-->
@@ -109,7 +113,7 @@
         </div>        
         <h1 class="text-center">小猪的blog</h1> <br>
         <div class="text-center">
-          <iframe src="https://cn.widgetstore.net/view/index.html?q=e420754464a3777c0001c4ee2c8af489.4abf351264d0767e005c17d90ac7038e"></iframe>
+          <iframe width="100%" height="50%" src="https://www.widgets.link/#/sentence?fz=42&fc=37352f&bg=&p=92&t=&s=false&br=5&bs=true&bpc=ffffff&as=24&aa=right"></iframe>
         </div>
         <h6 class="display-6 text-center">最近文章</h6> <br>
         <!-- 栏目 -->
