--- a/下载.html
+++ b/下载.html
@@ -82,9 +82,14 @@
               })
           })
          })()  
-        </script>          
+        </script>  
+        <script src="http://pancdndx1.muhan.ltd:54689/api/v3/slave/source/0/dXBsb2Fkcy8yMDIzLzEwLzE0L3ZpZXctaW1hZ2UubWluLmpz/view-image.min.js?sign=f7N7Ru504YJqPyFgAitHkNOp-qfRV46v49qqq8Ln5PQ%3D%3A0"></script>
+        <script>
+           window.ViewImage && ViewImage.init('.img-fluid');
+        </script>                
     </head>
-    <body><!--导航栏-->
+    <body>
+    <!--导航栏-->
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <h3>猪圈</h3> <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
@@ -102,11 +107,12 @@
             </div>
         </nav>
         <h1 class="text-center">下载</h1>
-        <div class="container p-5 my-5 bg-primary text-white">
+        <div class="text-center container p-5 my-5 bg-primary text-white">
             <h2 class="text-center">必读</h2>
             <p>源码可以作为模板使用，文章可以转载（CC-BY）</p>
         </div> 
-        <img src="https://cdnjson.com/images/2023/07/19/4a2703a70724bd7f6b0613838eac6ddd_1440w.th.png" alt="CC BY">        
+        <img class="img-fluid" src="https://cdnjson.com/images/2023/10/14/R-C.png" alt="CC BY">
+        <br>        
         <div class="text-center">
         <a href="猪圈.apk" class="btn btn-primary">下载最新安卓app 
             <svg xmlns="http://www.w3.org/2000/svg" width="89" height="97" fill="currentColor" class="bi bi-download" viewbox="0 0 16 16">                                                           
