--- a/小玩意导航页.html
+++ b/小玩意导航页.html
@@ -80,7 +80,11 @@
               })
           })
          })()  
-        </script>  
+        </script> 
+                <script src="http://pancdndx1.muhan.ltd:54689/api/v3/slave/source/0/dXBsb2Fkcy8yMDIzLzEwLzE0L3ZpZXctaW1hZ2UubWluLmpz/view-image.min.js?sign=f7N7Ru504YJqPyFgAitHkNOp-qfRV46v49qqq8Ln5PQ%3D%3A0"></script>
+        <script>
+           window.ViewImage && ViewImage.init('.img-fluid');
+        </script> 
         <meta name="description" content="小猪漫画的猪圈">
     </head>
     <body>
