--- a/留言.html
+++ b/留言.html
@@ -103,7 +103,7 @@
         </nav>   
         <h1>留言</h1>
          <!--评论系统-->
-         <link href="https://cdn.staticfile.org/waline/2.15.5/waline.min.css" rel="stylesheet">
+         <link href="https://cdn.staticfile.org/waline/2.15.5/waline.css" rel="stylesheet">
          <div id="waline"></div>
         <script type="module">
           import { init } from 'https://unpkg.com/@waline/client@v2/dist/waline.mjs';
