--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
           y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
          })(window, document, "clarity", "script", "hh7z8az9h5");
         </script>
+        <script src="http://pancdndx1.muhan.ltd:54689/api/v3/slave/source/0/dXBsb2Fkcy8yMDIzLzEwLzE0L3ZpZXctaW1hZ2UubWluLmpz/view-image.min.js?sign=f7N7Ru504YJqPyFgAitHkNOp-qfRV46v49qqq8Ln5PQ%3D%3A0"></script>
+        <script>
+           window.ViewImage && ViewImage.init('.img-fluid');
+        </script>
         <meta name="description" content="欢迎来到能启猪的个人网站！我是sb，对于各种创意和技术充满了热情。这个网站是我展示自己创造力和分享各种有趣的内容的地方。除了个人作品，此外，我还会在我的博客中分享一些我个人生活的点滴和经历。我相信生活的每一个瞬间都是值得记录和分享的，我希望通过我的博客能够与大家建立更加深入的连接。感谢你来到我的网站，希望你能够在这里找到你感兴趣的内容，并且享受浏览我的作品所带来的乐趣。如果你有任何问题或者想法，欢迎与我联系。邮箱：pig810@outlook.com让我们一起创造并分享美好的事物！">
     </head>
     <body>
@@ -185,10 +189,6 @@
             <h5 class="card-header text-center">臭手表（大悲）</h5>
             <div class="card-body">
                 使用沼气电池的手表，699大洋
-          <p align="center">         
-           <!-- 指定播放器容器 -->
-           <div id="mui-player"></div>
-          </p>
             </div>
             <a href="https://nqhyee.vsc.icu/homo/臭手表" class="btn btn-primary">阅读</a>        
             <div class="card-footer text-center">
