--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                  controls
                  preload="auto"    
                  data-setup='{}'>
-                <source src="http://pancdndx1.muhan.ltd:54689/api/v3/slave/source/0/dXBsb2Fkcy8yMDIzLzEwLzE3L0hvbW9XYXRjaCAob25saW5lLXZpZGVvLWN1dHRlci5jb20pICgxKS5tcDQ/HomoWatch.mp4?sign=nuJYsUlzXX0lUCs2aV3Pu0Z2d6d_gP9k3R-LK2g2MKw%3D%3A0" type="video/mp4"></source>
+                <source src="https://nqhyee.vsc.icu/video/HomoWatch.mp4" type="video/mp4"></source>
                   <p class="vjs-no-js">
                       把给我JavaScript开开
                   </p>
